pages/styles/Explore.module.scss
.page {
  min-height: 100vh;
  padding: 1em;

  .searchBar {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-around;
    gap: 4px;

    .button {
      display: flex;
      justify-content: center;
      align-items: center;
      width: 50px;
      height: 50px;
      padding: 1em;
      border-radius: 100%;

      transition: 0.3s;
      &:hover {
        cursor: pointer;
        transform: scale(1.1);
      }
    }
  }

  .cardsWrapper {
    margin-top: 1em;
    margin-bottom: 5em;
    display: flex;
    flex-direction: column;
    gap: 15px;
    overflow-y: scroll;
    padding-bottom: 1em;

    /* Shadows not being cut off */
    padding-left: 10px;
    padding-right: 10px;
    margin-left: -10px;
    margin-right: -10px;
  }

  .mapButton {
    position: fixed;
    left: 50%;
    transform: translateX(-50%);
    bottom: 6em;

    padding: 0.8em 1.3em;
    border-radius: 50px;

    border: none;
    color: white;
    background-color: #303030;

    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    gap: 0.5em;

    transition: 0.3s;
    &:hover {
      cursor: pointer;
      transform: translateX(-50%) scale(1.1);
    }
  }
}

